--- a/constellationsbrisees01.html
+++ b/constellationsbrisees01.html
@@ -14,25 +14,7 @@
     <link rel="stylesheet" href="//editor.silex.me/static/2.7/normalize.css" data-silex-static="">
     <link rel="stylesheet" href="//editor.silex.me/static/2.7/front-end.css" data-silex-static="">
 
-    <style type="text/css" class="silex-style">
-        a:link {
-            color: #b296bd;
-            text-decoration: none;
-            background-color: transparent
-        }
-        
-        a:visited {
-            color: #ffffff;
-            text-decoration: none;
-            background-color: transparent
-        }
-        
-        a:hover {
-            color: #ffffff;
-            text-decoration: underline;
-            background-color: transparent
-        }
-    </style>
+    <style type="text/css" class="silex-style"></style>
     <script type="text/javascript" class="silex-script"></script>
     <style class="silex-inline-styles" type="text/css">
         .body-initial {
