--- a/constellationsbrisees01.html
+++ b/constellationsbrisees01.html
@@ -14,7 +14,25 @@
     <link rel="stylesheet" href="//editor.silex.me/static/2.7/normalize.css" data-silex-static="">
     <link rel="stylesheet" href="//editor.silex.me/static/2.7/front-end.css" data-silex-static="">
 
-    <style type="text/css" class="silex-style"></style>
+    <style type="text/css" class="silex-style">
+        a:link {
+            color: #b296bd;
+            text-decoration: none;
+            background-color: transparent
+        }
+        
+        a:visited {
+            color: #ffffff;
+            text-decoration: none;
+            background-color: transparent
+        }
+        
+        a:hover {
+            color: #71377f;
+            text-decoration: none;
+            background-color: transparent
+        }
+    </style>
     <script type="text/javascript" class="silex-script"></script>
     <style class="silex-inline-styles" type="text/css">
         .body-initial {
