--- a/constellationsbrisees02.html
+++ b/constellationsbrisees02.html
@@ -29,7 +29,7 @@
         }
         
         a:link {
-            color: #b296bd;
+            color: #ffffff;
             text-decoration: none;
             background-color: transparent
         }
@@ -318,7 +318,7 @@
 
 
     <style id="current-page-style">
-        .page-ressources {
+        .page-accueil {
             display: inherit;
         }
     </style>
@@ -333,9 +333,8 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-accueil" data-silex-type="page" class="page-element">Accueil</a><a id="page-cartographie_constellations" data-silex-type="page" class="page-element">cartographie_Constellations</a><a id="page-parcours" data-silex-type="page" class="page-element">parcours</a>
-        <a
-            id="page-therese_pierre" data-silex-type="page" class="page-element">therese_pierre</a><a id="page-ressources" data-silex-type="page" class="page-element page-link-active">ressources</a></div>
+        <a id="page-accueil" data-silex-type="page" class="page-element page-link-active">Accueil</a><a id="page-cartographie_constellations" data-silex-type="page" class="page-element">cartographie_Constellations</a><a id="page-parcours" data-silex-type="page"
+            class="page-element">parcours</a><a id="page-therese_pierre" data-silex-type="page" class="page-element">therese_pierre</a><a id="page-ressources" data-silex-type="page" class="page-element">ressources</a></div>
 
 
 
@@ -362,7 +361,7 @@
                     <font size="3"><span style="color: rgb(255, 255, 255);">Les parcours<br></span></font>
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1514919016814-14 page-link-active" data-silex-id="silex-id-1514919016814-14" style="" data-silex-href="#!page-ressources">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1514919016814-14" data-silex-id="silex-id-1514919016814-14" style="" data-silex-href="#!page-ressources">
                 <div class="silex-element-content normal">
                     <font size="3"><span style="color: rgb(255, 255, 255);">Ressources<br></span></font>
                 </div>
@@ -384,7 +383,7 @@
 
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style silex-id-1514462141280-5 text-element" data-silex-id="silex-id-1514462141280-5" style="" data-silex-href="#!page-accueil">
+            <div data-silex-type="text" class="editable-style silex-id-1514462141280-5 text-element page-link-active" data-silex-id="silex-id-1514462141280-5" style="" data-silex-href="#!page-accueil">
                 <div class="silex-element-content normal"><span style="color: rgb(255, 255, 255);"><font size="3">Accueil</font><br></span></div>
             </div>
         </div>
@@ -476,18 +475,14 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1514918538454-9 page-accueil paged-element" data-silex-id="silex-id-1514918538454-9" style="">
                 <div class="silex-element-content normal">
-                    <p style="text-align: center;"><span style="font-family: Cantata;"><span style="color: rgb(255, 255, 255);">Projet participatif européen, numérique et féministe de <span style="color: rgb(217, 210, 233);"></span></span>
-                        </span><span style="font-family: Cantata;"><span style="color: rgb(255, 255, 255);"><span style="color: rgb(217, 210, 233);"><a href="//www.queercode.net/"><font size="3"><span style="font-family: Cantata;"><span style="color: rgb(255, 255, 255);"></span>
+                    <p style="text-align: center;"><span style="font-family: Cantata;"><span style="color: rgb(255, 255, 255);">Projet participatif européen, numérique et féministe de <span style="color: rgb(217, 210, 233);"></span></span><span style="color: rgb(255, 255, 255);"><span style="color: rgb(217, 210, 233);"><a href="//www.queercode.net/"><font size="3"><span style="color: rgb(255, 255, 255);"></span>
                         <span
                             style="color: rgb(142, 124, 195);"></span>
-                            </span>
                             </font>
                             </a>
                             <font size="3"><a href="https://www.queercode.net/">Queer Code</a></font>
                             </span>
-                            </span>
-                            </span>.
-
+                            </span>.</span>
                     </p><span style="font-family: Cantata;">
                     </span>
                     <div style="text-align: center;"><span style="font-family: Cantata;"><span style="color: rgb(255, 255, 255);">
