--- a/constellationsbrisees02.html
+++ b/constellationsbrisees02.html
@@ -43,7 +43,14 @@
         /*nav*/
         
         .nav-element.page-link-active {
-            color: #451a50;
+            background-color: #451a50;
+            transition: background-color .5s linear;
+            -moz-transition: background-color .5s linear;
+            /* FF3.7+ */
+            -o-transition: background-color .5s linear;
+            /* Opera 10.5 */
+            -webkit-transition: background-color .5s linear;
+            /* Saf3.2+, Chrome */
         }
         
         .nav-element.page-link-active:hover {
