--- a/constellationsbrisees02.html
+++ b/constellationsbrisees02.html
@@ -1154,7 +1154,7 @@ Carte intitulée: <a href="http://tetrade.huma-num.fr/Tetrademap_Enfant_Paris/">
             <div data-silex-id="silex-id-1442914737143-3" class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;"><font size="3">
                     <span style="color: rgb(255, 255, 255);">
-                    2017 - Constellations Brisées un projet réalisé par </span><span style="color: rgb(142, 124, 195);"><a href="//www.queercode.net/">Queer Code</a></span>
+                    2017 - Constellations Brisées un projet de </span><span style="color: rgb(142, 124, 195);"><a href="//www.queercode.net/">Queer Code</a></span>
 
                     </font>
                     </span>
