--- a/constellationsbrisees03.html
+++ b/constellationsbrisees03.html
@@ -41,8 +41,8 @@
             background-color: transparent
         }
         
-        img:hover {
-            opacity: 0.5;
+        .image-element img:hover {
+            opacity: 0.7;
             filter: alpha(opacity=30);
         }
         /*nav*/
