--- a/constellationsbrisees03.html
+++ b/constellationsbrisees03.html
@@ -41,7 +41,7 @@
             background-color: transparent
         }
         
-        .image-element img:hover {
+        .image-element parcours-img:hover {
             opacity: 0.7;
             filter: alpha(opacity=30);
         }
@@ -632,7 +632,7 @@ nos amoureuses</i>&nbsp;» de <a href="https://www.filmsdocumentaires.com/auteur
                     </h2><span style="font-family: georgia, serif;">
                 </span></div>
             </div>
-            <div data-silex-type="image" class="editable-style silex-id-1514918829738-13 image-element paged-element page-parcours img" data-silex-id="silex-id-1514918829738-13" style="" data-silex-href="#!page-therese_pierre"><img src="therese_pierre_parcours.png" class="silex-element-content"></div>
+            <div data-silex-type="image" class="editable-style silex-id-1514918829738-13 image-element paged-element page-parcours parcours-img" data-silex-id="silex-id-1514918829738-13" style="" data-silex-href="#!page-therese_pierre"><img src="therese_pierre_parcours.png" class="silex-element-content"></div>
 
 
             <div data-silex-type="text" class="editable-style text-element silex-id-1514918538454-9 page-accueil paged-element" data-silex-id="silex-id-1514918538454-9" style="">
