--- a/constellationsbrisees03.html
+++ b/constellationsbrisees03.html
@@ -41,7 +41,7 @@
             background-color: transparent
         }
         
-        .image-element parcours-img:hover {
+        .image-element parcours-img img:hover {
             opacity: 0.7;
             filter: alpha(opacity=30);
         }
