--- a/constellationsbrisees03.html
+++ b/constellationsbrisees03.html
@@ -1574,7 +1574,7 @@ amoureuses</i> de Robin Hunzinger, diffusé en 2007. Nous
 l’avons présenté à travers la France, la Belgique mais également
 en Suisse auprès de publics LGBTQI et hétérosexuels. Nous avons
 mené nos propres recherches et accompagné Claudie Hunzinger à
-publier son manuscrit <i>Elles vivaient d’espoir</i>.</span><span style="font-family: georgia, serif;"></span><span style="font-family: georgia, serif;"><br>Nous
+publier son manuscrit <i>Elles vivaient d’espoir</i>.</span><span style="font-family: georgia, serif;"></span><span style="font-family: georgia, serif;"> Nous
 remercions chaleureusement Robin Hunzinger qui nous a autorisé à
 présenter de nombreux extraits de son documentaire <i>Où
 sont nos amoureuses</i> pour enrichir les ressources
@@ -1605,7 +1605,7 @@ si vous en avez envie, contactez-nous&nbsp;!</span></font>
 </span></font>
                     </div>
                     <p style="margin-bottom: 0cm; line-height: 100%; text-align: left;">
-                        <font size="3"><span style="font-family: georgia, serif;">Mail&nbsp;:
+                        <font size="3"><span style="font-family: georgia, serif;">Mail:
 contact@queercode.net</span></font>
                     </p>
                     <div style="text-align: left;">
