--- a/constellationsbrisees05.html
+++ b/constellationsbrisees05.html
@@ -615,7 +615,7 @@
 
     <meta name="twitter:card" content="summary">
     <style id="current-page-style">
-        .page-ressources {
+        .page-home {
             display: inherit;
         }
     </style>
@@ -631,7 +631,7 @@
         </div>
 
         <a id="page-accueil" data-silex-type="page" class="page-element">Accueil</a><a id="page-cartographie_constellations" data-silex-type="page" class="page-element">cartographie_Constellations</a><a id="page-parcours" data-silex-type="page" class="page-element">parcours</a>
-        <a id="page-therese_pierre" data-silex-type="page" class="page-element">therese_pierre</a><a id="page-ressources" data-silex-type="page" class="page-element page-link-active">ressources</a><a id="page-home" data-silex-type="page" class="page-element">Home</a>
+        <a id="page-therese_pierre" data-silex-type="page" class="page-element">therese_pierre</a><a id="page-ressources" data-silex-type="page" class="page-element">ressources</a><a id="page-home" data-silex-type="page" class="page-element page-link-active">Home</a>
         <a id="page-mapping-constellations" data-silex-type="page" class="page-element">Mapping constellations</a>
         <a id="page-the-paths" data-silex-type="page" class="page-element">The paths</a><a id="page-therese_pierre_english" data-silex-type="page" class="page-element">therese_pierre_english</a></div>
 
@@ -685,7 +685,7 @@
                         </div>
                     </div>
                 </div>
-                <div data-silex-type="text" class="editable-style text-element silex-id-1514919016814-14 nav-element page-link-active" data-silex-id="silex-id-1514919016814-14" style="" data-silex-href="#!page-ressources">
+                <div data-silex-type="text" class="editable-style text-element silex-id-1514919016814-14 nav-element" data-silex-id="silex-id-1514919016814-14" style="" data-silex-href="#!page-ressources">
                     <div class="silex-element-content normal">
                         <div style="text-align: center;">
                             <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Ressources</span></font>
@@ -739,7 +739,7 @@
                         </div>
                     </div>
                 </div>
-                <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518179636443-5 page-link-active" data-silex-id="silex-id-1518179636443-5" style="" data-silex-href="#!page-ressources">
+                <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518179636443-5" data-silex-id="silex-id-1518179636443-5" style="" data-silex-href="#!page-ressources">
                     <div class="silex-element-content normal">
                         <div style="text-align: center;">
                             <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Resources</span></font>
@@ -748,7 +748,7 @@
                         </div>
                     </div>
                 </div>
-                <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518179636443-6" data-silex-id="silex-id-1518179636443-6" style="" data-silex-href="#!page-home">
+                <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518179636443-6 page-link-active" data-silex-id="silex-id-1518179636443-6" style="" data-silex-href="#!page-home">
                     <div class="silex-element-content normal">
                         <div style="text-align: center;">
                             <div style="text-align: center;"><span style="font-family: georgia, serif;"><span style="color: rgb(255, 255, 255);"><font size="3">Home</font></span></span><br></div><span style="font-family: georgia, serif;"><span style="color: rgb(255, 255, 255);"></span></span>
