--- a/constellationsbrisees06.html
+++ b/constellationsbrisees06.html
@@ -893,7 +893,7 @@
 
     <meta name="twitter:card" content="summary">
     <style id="current-page-style">
-        .page-therese_pierre_english {
+        .page-accueil {
             display: inherit;
         }
     </style>
@@ -908,11 +908,11 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-accueil" data-silex-type="page" class="page-element">Accueil</a><a id="page-cartographie_constellations" data-silex-type="page" class="page-element">cartographie_Constellations</a><a id="page-parcours" data-silex-type="page" class="page-element">parcours</a>
+        <a id="page-accueil" data-silex-type="page" class="page-element page-link-active">Accueil</a><a id="page-cartographie_constellations" data-silex-type="page" class="page-element">cartographie_Constellations</a><a id="page-parcours" data-silex-type="page"
+            class="page-element">parcours</a>
         <a id="page-therese_pierre" data-silex-type="page" class="page-element">therese_pierre</a><a id="page-ressources" data-silex-type="page" class="page-element">ressources</a><a id="page-home" data-silex-type="page" class="page-element">Home</a>
         <a id="page-mapping-constellations" data-silex-type="page" class="page-element">Mapping constellations</a>
-        <a id="page-the-paths" data-silex-type="page" class="page-element">The paths</a><a id="page-therese_pierre_english" data-silex-type="page" class="page-element page-link-active">therese_pierre_english</a><a id="page-resources" data-silex-type="page"
-            class="page-element">Resources</a></div>
+        <a id="page-the-paths" data-silex-type="page" class="page-element">The paths</a><a id="page-therese_pierre_english" data-silex-type="page" class="page-element">therese_pierre_english</a><a id="page-resources" data-silex-type="page" class="page-element">Resources</a></div>
 
 
 
@@ -973,7 +973,7 @@
                         </div>
                     </div>
                 </div>
-                <div data-silex-type="text" class="editable-style silex-id-1514462141280-5 text-element nav-element" data-silex-id="silex-id-1514462141280-5" style="" data-silex-href="#!page-accueil">
+                <div data-silex-type="text" class="editable-style silex-id-1514462141280-5 text-element nav-element page-link-active" data-silex-id="silex-id-1514462141280-5" style="" data-silex-href="#!page-accueil">
                     <div class="silex-element-content normal">
                         <div style="text-align: center;">
                             <div style="text-align: center;"><span style="font-family: georgia, serif;"><span style="color: rgb(255, 255, 255);"><font size="3">Accueil</font></span></span><br></div><span style="font-family: georgia, serif;"><span style="color: rgb(255, 255, 255);"></span></span>
@@ -1046,7 +1046,7 @@
             </div>
         </div>
         <div data-silex-type="container" class="editable-style silex-id-1518188806706-24 container-element page-accueil paged-element page-home" data-silex-id="silex-id-1518188806706-24" style="">
-            <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518188624516-22 page-accueil paged-element page-home" data-silex-id="silex-id-1518188624516-22" style="" data-silex-href="#!page-accueil" title="français">
+            <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518188624516-22 page-accueil paged-element page-home page-link-active" data-silex-id="silex-id-1518188624516-22" style="" data-silex-href="#!page-accueil" title="français">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
                         <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Français</span></font>
@@ -1066,7 +1066,7 @@
             </div>
         </div>
         <div data-silex-type="container" class="editable-style container-element silex-id-1518188937243-25 page-cartographie_constellations paged-element page-mapping-constellations" data-silex-id="silex-id-1518188937243-25" style="">
-            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518188937244-26" data-silex-id="silex-id-1518188937244-26" style="" data-silex-href="#!page-accueil" title="français">
+            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518188937244-26 page-link-active" data-silex-id="silex-id-1518188937244-26" style="" data-silex-href="#!page-accueil" title="français">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
                         <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Français</span></font>
@@ -1106,7 +1106,7 @@
             </div>
         </div>
         <div data-silex-type="container" class="editable-style container-element silex-id-1518189062118-33 page-parcours paged-element page-the-paths" data-silex-id="silex-id-1518189062118-33" style="">
-            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518189062118-34" data-silex-id="silex-id-1518189062118-34" style="" data-silex-href="#!page-accueil" title="français">
+            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518189062118-34 page-link-active" data-silex-id="silex-id-1518189062118-34" style="" data-silex-href="#!page-accueil" title="français">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
                         <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Français</span></font>
@@ -1164,7 +1164,7 @@
             </div>
         </div>
         <div data-silex-type="container" class="editable-style container-element silex-id-1518189163858-44 page-therese_pierre paged-element page-therese_pierre_english" data-silex-id="silex-id-1518189163858-44" style="">
-            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518189163858-45" data-silex-id="silex-id-1518189163858-45" style="" data-silex-href="#!page-accueil" title="français">
+            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518189163858-45 page-link-active" data-silex-id="silex-id-1518189163858-45" style="" data-silex-href="#!page-accueil" title="français">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
                         <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Français</span></font>
@@ -1211,7 +1211,7 @@
                     </div>
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518189163862-50 page-therese_pierre_english paged-element page-therese_pierre page-link-active" data-silex-id="silex-id-1518189163862-50" style="" data-silex-href="#!page-therese_pierre_english"
+            <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1518189163862-50 page-therese_pierre_english paged-element page-therese_pierre" data-silex-id="silex-id-1518189163862-50" style="" data-silex-href="#!page-therese_pierre_english"
                 title="english">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
@@ -1233,7 +1233,7 @@
             </div>
         </div>
         <div data-silex-type="container" class="editable-style container-element silex-id-1518189171338-51 page-ressources paged-element page-resources" data-silex-id="silex-id-1518189171338-51" style="">
-            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518189171338-52" data-silex-id="silex-id-1518189171338-52" style="" data-silex-href="#!page-accueil" title="français">
+            <div data-silex-type="text" class="editable-style text-element nav-element page-accueil paged-element page-home silex-id-1518189171338-52 page-link-active" data-silex-id="silex-id-1518189171338-52" style="" data-silex-href="#!page-accueil" title="français">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
                         <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Français</span></font>
@@ -1444,8 +1444,7 @@ nos amoureuses</i>&nbsp;» de <a href="https://www.filmsdocumentaires.com/auteur
                 </div>
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1517410039883-3 html-element page-therese_pierre_english paged-element" data-silex-id="silex-id-1517410039883-3" style="">
-                <div class="silex-element-content"><iframe src="https://umap.openstreetmap.fr/fr/map/therese-pierre-english_194924?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;searchControl=null&amp;tilelayersControl=null&amp;embedControl=null&amp;datalayersControl=null&amp;onLoadPanel=undefined&amp;captionBar=false"
-                        data-silex-iframe-src="https://umap.openstreetmap.fr/fr/map/therese-pierre-english_194924?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;searchControl=null&amp;tilelayersControl=null&amp;embedControl=null&amp;datalayersControl=null&amp;onLoadPanel=undefined&amp;captionBar=false"
+                <div class="silex-element-content"><iframe src="" data-silex-iframe-src="https://umap.openstreetmap.fr/fr/map/therese-pierre-english_194924?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;searchControl=null&amp;tilelayersControl=null&amp;embedControl=null&amp;datalayersControl=null&amp;onLoadPanel=undefined&amp;captionBar=false"
                         width="100%" height="600px" frameborder="0"></iframe></div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1517410206528-4 page-therese_pierre_english paged-element" data-silex-id="silex-id-1517410206528-4" style="">
@@ -1878,7 +1877,7 @@ contact@queercode.net</font></span></p>
                     </h2><span style="font-family: georgia, serif;">
                 </span></div>
             </div>
-            <div data-silex-type="image" class="editable-style image-element parcours-img silex-id-1518180230311-8 page-the-paths paged-element page-link-active" data-silex-id="silex-id-1518180230311-8" style="" data-silex-href="#!page-therese_pierre_english"><img src="therese_pierre_parcours.png" class="silex-element-content"></div>
+            <div data-silex-type="image" class="editable-style image-element parcours-img silex-id-1518180230311-8 page-the-paths paged-element" data-silex-id="silex-id-1518180230311-8" style="" data-silex-href="#!page-therese_pierre_english"><img src="therese_pierre_parcours.png" class="silex-element-content"></div>
         </div>
     </div>
 
