--- a/constellationsbrisees07.html
+++ b/constellationsbrisees07.html
@@ -3333,7 +3333,7 @@ cartographiques liés à la Seconde Guerre Mondiale</font></b></span>
                 </div>
             </div>
         </div>
-        <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1520508811749-12 page-ressources paged-element page-resources" data-silex-id="silex-id-1520508811749-12" style="" data-silex-href="#!page-parcours-de-th-r-se-pierre" title="français">
+        <div data-silex-type="text" class="editable-style text-element nav-element silex-id-1520508811749-12 page-ressources paged-element page-resources" data-silex-id="silex-id-1520508811749-12" style="" data-silex-href="#!page-ressources" title="français">
             <div class="silex-element-content normal">
                 <div style="text-align: center;">
                     <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Français</span></font>
@@ -3342,7 +3342,7 @@ cartographiques liés à la Seconde Guerre Mondiale</font></b></span>
                 </div>
             </div>
         </div>
-        <div data-silex-type="text" class="editable-style text-element nav-element page-link-active silex-id-1520508811710-11 page-ressources paged-element page-resources" data-silex-id="silex-id-1520508811710-11" style="" data-silex-href="#!page-path-of-th-r-se-pierre"
+        <div data-silex-type="text" class="editable-style text-element nav-element page-link-active silex-id-1520508811710-11 page-ressources paged-element page-resources" data-silex-id="silex-id-1520508811710-11" style="" data-silex-href="#!page-resources"
             title="english">
             <div class="silex-element-content normal">
                 <div style="text-align: center;">
