--- a/constellationsbrisees07.html
+++ b/constellationsbrisees07.html
@@ -1948,7 +1948,7 @@ destination de ces publics.<br>Plus d’infos sur le site : <a href="https://car
             </div>
 
 
-            <div data-silex-type="text" class="editable-style text-element nav-element hide-on-mobile silex-id-1523603003540-6 page-ressources paged-element page-resources" data-silex-id="silex-id-1523603003540-6" style="" data-silex-href="#!page-parcours-de-th-r-se-pierre" title="français">
+            <div data-silex-type="text" class="editable-style text-element nav-element hide-on-mobile silex-id-1523603003540-6 page-ressources paged-element page-resources" data-silex-id="silex-id-1523603003540-6" style="" data-silex-href="#!page-ressources" title="français">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
                         <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Français</span></font>
@@ -1957,7 +1957,7 @@ destination de ces publics.<br>Plus d’infos sur le site : <a href="https://car
                     </div>
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element nav-element hide-on-mobile silex-id-1523603003542-7 page-ressources paged-element paged-element-visible page-resources" data-silex-id="silex-id-1523603003542-7" style="" data-silex-href="#!page-path-of-th-r-se-pierre" title="english">
+            <div data-silex-type="text" class="editable-style text-element nav-element hide-on-mobile silex-id-1523603003542-7 page-ressources paged-element page-resources paged-element-visible" data-silex-id="silex-id-1523603003542-7" style="" data-silex-href="#!page-resources" title="english">
                 <div class="silex-element-content normal">
                     <div style="text-align: center;">
                         <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">English</span></font>
