--- a/site04/index.html
+++ b/site04/index.html
@@ -227,7 +227,15 @@
                             <font size="3"><span style="font-family: georgia, serif;"></span></font>
                         </div>
                     </div>
-                </a></div></div>
+                </a><a href="#!page-ressources" data-silex-type="text" class="editable-style text-element silex-id-1514919016814-14 nav-element" style="">
+                    <div class="silex-element-content normal">
+                        <div style="text-align: center;">
+                            <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Ressources</span></font>
+                                </span><br></div><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);"></span></font>
+                            </span>
+                        </div>
+                    </div>
+                </a><a href="https://www.facebook.com/QueeR-code-1646503238931149/timeline/" data-silex-type="image" class="editable-style silex-id-1514462264448-8 image-element paged-element-visible" style=""><img src="assets/fb_queercode.png" class="silex-element-content"></a><a href="https://twitter.com/QueerCodeQR" data-silex-type="image" class="editable-style silex-id-1514462318157-9 image-element" style=""><img src="assets/twitter_queercode.png" class="silex-element-content"></a></div></div>
         <div data-silex-type="container" class="editable-style silex-id-1518188806706-24 container-element page-accueil paged-element page-home hide-on-mobile paged-element-hidden" style="">
             <a href="#!page-accueil" data-silex-type="text" class="editable-style text-element nav-element silex-id-1518188624516-22 page-accueil paged-element page-home hide-on-mobile" style="" title="français">
                 <div class="silex-element-content normal">
@@ -543,15 +551,7 @@
                         </span>
                     </div>
                 </div>
-            </div><a href="https://www.facebook.com/QueeR-code-1646503238931149/timeline/" data-silex-type="image" class="editable-style silex-id-1514462264448-8 image-element page-accueil paged-element page-cartographie-des-constellations page-cartographies-des-villes page-les-parcours page-parcours-de-th-r-se-pierre page-parcours-de-marguerite-chabiron page-ressources" style=""><img src="assets/fb_queercode.png" class="silex-element-content"></a><a href="#!page-ressources" data-silex-type="text" class="editable-style text-element silex-id-1514919016814-14 nav-element page-accueil paged-element page-cartographie-des-constellations page-cartographies-des-villes page-les-parcours page-parcours-de-th-r-se-pierre page-parcours-de-marguerite-chabiron page-parcours-de-ruth-maier page-ressources paged-element-visible" style="">
-                    <div class="silex-element-content normal">
-                        <div style="text-align: center;">
-                            <div style="text-align: center;"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Ressources</span></font>
-                                </span><br></div><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);"></span></font>
-                            </span>
-                        </div>
-                    </div>
-                </a><a href="https://twitter.com/QueerCodeQR" data-silex-type="image" class="editable-style silex-id-1514462318157-9 image-element page-ressources paged-element page-parcours-de-ruth-maier page-parcours-de-marguerite-chabiron page-parcours-de-th-r-se-pierre page-les-parcours page-cartographies-des-villes page-cartographie-des-constellations page-accueil" style=""><img src="assets/twitter_queercode.png" class="silex-element-content"></a></div>
+            </div></div>
 
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366450713-3 section-element paged-element page-parcours-de-th-r-se-pierre page-path-of-th-r-se-pierre page-parcours-de-marguerite-chabiron page-parcours-de-ruth-maier" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366450713-2 silex-container-content container-element prevent-draggable website-width">
