--- a/constellationsbrisees10.html
+++ b/constellationsbrisees10.html
@@ -51,7 +51,7 @@
 
 
 
-    <link href="../../../../../github/get/constellationsbrisees/master/favicon.png" rel="shortcut icon">
+    <link href="favicon.png" rel="shortcut icon">
 
     <meta name="twitter:site" content="@QueerCodeQR">
     
@@ -2482,7 +2482,7 @@ la bibliothèque du Centre LGBT de Paris Ile de France. Nos objectifs
 coopération et l’entre-aide lors de cette recherche d’informations
 sur les vécus de lesbiennes et de femmes ayant aimé des femmes
 durant la Seconde Guerre Mondiale.</p><p style="margin-bottom: 0cm" align="JUSTIFY">
-</p></div></div><div data-silex-type="html" class="editable-style silex-id-1536921259916-25 html-element" data-silex-id="silex-id-1536921259916-25" style=""><div class="silex-element-content"><iframe allowfullscreen="" src="https://umap.openstreetmap.fr/en/map/les-femmes-qui-ont-aime-des-femmes-a-paris-de-1939_247658?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=true&amp;searchControl=null&amp;tilelayersControl=null&amp;embedControl=null&amp;datalayersControl=null&amp;onLoadPanel=undefined&amp;captionBar=false" width="100%" height="600px" frameborder="0"></iframe></div></div><div data-silex-type="text" class="editable-style text-element silex-id-1536921207080-24" data-silex-id="silex-id-1536921207080-24" style="">
+</p></div></div><div data-silex-type="html" class="editable-style silex-id-1536921259916-25 html-element" data-silex-id="silex-id-1536921259916-25" style=""><div class="silex-element-content"><iframe allowfullscreen="" src="https://umap.openstreetmap.fr/fr/map/les-femmes-qui-ont-aime-des-femmes-a-paris-de-1939_247658?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;searchControl=false&amp;tilelayersControl=false&amp;embedControl=null&amp;datalayersControl=null&amp;onLoadPanel=undefined&amp;captionBar=false&amp;editinosmControl=false&amp;locateControl=false" width="100%" height="600px" frameborder="0"></iframe></div></div><div data-silex-type="text" class="editable-style text-element silex-id-1536921207080-24" data-silex-id="silex-id-1536921207080-24" style="">
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;">
                     </span>
                     <p><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);"><span>
