--- a/constellations_maj13.html
+++ b/constellations_maj13.html
@@ -1101,7 +1101,7 @@ contact@queercode.net</font></span></p>
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Marguerite Chabiron 1904-1960</span></font>
                     </span>
                 </div>
-            </div><div data-silex-type="image" class="editable-style silex-id-1556438218158-1 image-element page-les-parcours paged-element" data-silex-id="silex-id-1556438218158-1" data-silex-href="#!page-parcours-ovida-delect"><img src="Ovida%20Delect.jpg" class="silex-element-content"></div><div data-silex-type="text" class="editable-style silex-id-1556438262902-2 text-element page-les-parcours paged-element" data-silex-id="silex-id-1556438262902-2" data-silex-href="#!page-parcours-ovida-delect"><div class="silex-element-content normal"><p>Ovida Delect 1926-1996<br></p></div></div></div>
+            </div><div data-silex-type="image" class="editable-style silex-id-1556438218158-1 image-element page-les-parcours paged-element parcours-img" data-silex-id="silex-id-1556438218158-1" data-silex-href="#!page-parcours-ovida-delect"><img src="Ovida%20Delect.jpg" class="silex-element-content"></div><div data-silex-type="text" class="editable-style silex-id-1556438262902-2 text-element page-les-parcours paged-element" data-silex-id="silex-id-1556438262902-2" data-silex-href="#!page-parcours-ovida-delect"><div class="silex-element-content normal"><p>Ovida Delect 1926-1996<br></p></div></div></div>
     </div>
 
 
