--- a/site/les-parcours.html
+++ b/site/les-parcours.html
@@ -242,7 +242,7 @@
             </div><a href="parcours-de-ruth-maier.html" data-silex-type="image" class="editable-style silex-id-1524302912284-28 image-element parcours-img page-les-parcours paged-element page-the-paths" style=""><img src="assets/Ruth_parcours.jpg" class="silex-element-content"></a><div data-silex-type="text" class="editable-style text-element silex-id-1524303260874-30 page-the-paths paged-element page-les-parcours page-link-active" style="">
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Ruth Maier 1920-1942</span></font></span>
                 </div>
-            </div><a href="parcours-ovida-delect.html" data-silex-type="image" class="editable-style silex-id-1556438218158-1 image-element page-les-parcours paged-element"><img src="assets/Ovida%20Delect.jpg" class="silex-element-content"></a><a href="parcours-ovida-delect.html" data-silex-type="text" class="editable-style silex-id-1556438262902-2 text-element page-les-parcours paged-element"><div class="silex-element-content normal"><p>Ovida Delect 1926-1996<br></p></div></a></div>
+            </div><a href="parcours-ovida-delect.html" data-silex-type="image" class="editable-style silex-id-1556438218158-1 image-element page-les-parcours paged-element parcours-img"><img src="assets/Ovida%20Delect.jpg" class="silex-element-content"></a><a href="parcours-ovida-delect.html" data-silex-type="text" class="editable-style silex-id-1556438262902-2 text-element page-les-parcours paged-element"><div class="silex-element-content normal"><p>Ovida Delect 1926-1996<br></p></div></a></div>
     </div>
 
 
