--- a/site/cartographie-notre-histoire-compte.html
+++ b/site/cartographie-notre-histoire-compte.html
@@ -320,7 +320,7 @@ contribuer à notre démarche.</p><p>
 </p><p> Vous êtes sorti.e du
 placard, sortez vos archives des tiroirs !</p><p>
 </p><p> Rejoignez-nous sur <a href="https://www.facebook.com/notrehistoirecompte/">Facebook</a> et <a href="https://www.instagram.com/notrehistoirecompte/">Instagram</a> ! Notre
-histoire compte !<br></p>
+histoire compte !</p><p> Cartographie <a href="http://constellationsbrisees.net/documents/CarteBaladeA3.pdf">version papier</a>.     <br></p>
 
 </div></div><div data-silex-type="html" class="editable-style silex-id-1561627211026-11 html-element"><div class="silex-element-content"><iframe allowfullscreen="" src="https://umap.openstreetmap.fr/fr/map/notre-histoire-compte_334922?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=true&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;searchControl=null&amp;tilelayersControl=null&amp;embedControl=null&amp;datalayersControl=null&amp;onLoadPanel=undefined&amp;captionBar=false" width="100%" height="600px" frameborder="0"></iframe></div></div><div data-silex-type="text" class="editable-style text-element silex-id-1561627280577-12 text-style-2" style="">
                 <div class="silex-element-content normal"><p> Cartographie interactive, pour un confort de lecture, favorisez le mode <a href="https://umap.openstreetmap.fr/fr/map/notre-histoire-compte_334922#16/46.2120/6.1479">plein écran</a>, la navigation se fait en cliquant sur les
