--- a/site/cartographie-notre-histoire-compte.html
+++ b/site/cartographie-notre-histoire-compte.html
@@ -342,7 +342,10 @@ ceux et les ilLEs à venir !<br></p><br><p></p><p>
                         
                 </p>
                 </div>
-            </div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1536921100015-17">
+            </div><div data-silex-type="image" class="editable-style silex-id-1567435356550-0 image-element"><img src="assets/Ville_de_Geneve_Web_Blanc.jpg" class="silex-element-content"></div><div data-silex-type="text" class="editable-style silex-id-1567435395160-1 text-element"><div class="silex-element-content normal"><p>
+Avec le soutien de la ville de Genève.
+
+</p></div></div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1536921100015-17">
         <div data-silex-type="container" class="editable-style container-element silex-element-content silex-container-content website-width prevent-draggable silex-id-1536921100016-18"></div>
     </div><div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1536921106600-19">
         <div data-silex-type="container" class="editable-style container-element silex-element-content silex-container-content website-width prevent-draggable silex-id-1536921106600-20">
