--- a/site/cartographies-des-villes.html
+++ b/site/cartographies-des-villes.html
@@ -236,7 +236,7 @@
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Les femmes qui ont aimé des femmes à Paris de 1939 à 1944</span></font>
                     </span>
                 </div>
-            </div><a href="cartographie-continuum.html" data-silex-type="image" class="editable-style silex-id-1542030818630-3 image-element parcours-img" style=""><img src="assets/continuum_affiche.png" class="silex-element-content"></a><div data-silex-type="text" class="editable-style text-element silex-id-1561622740854-1" style="">
+            </div><a href="cartographie-continuum.html" data-silex-type="image" class="editable-style silex-id-1542030818630-3 image-element parcours-img page-cartographies-des-villes paged-element" style=""><img src="assets/continuum_affiche.png" class="silex-element-content"></a><div data-silex-type="text" class="editable-style text-element silex-id-1561622740854-1 page-cartographies-des-villes paged-element page-link-active" style="">
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Continuum - Récits et savoir LGBTQI+</span></font>
                     </span>
                 </div>
