--- a/septembre2019.html
+++ b/septembre2019.html
@@ -1083,7 +1083,7 @@ contact@queercode.net</font></span></p>
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Continuum - Récits et savoir LGBTQI+</span></font>
                     </span>
                 </div>
-            </div><div data-silex-type="image" class="editable-style image-element parcours-img silex-id-1561622623616-0 page-cartographies-des-villes paged-element" data-silex-id="silex-id-1561622623616-0" style="" data-silex-href="#!page-cartographie-notre-histoire-compte"><img src="carte_recto.png" class="silex-element-content"></div><div data-silex-type="text" class="editable-style text-element silex-id-1542031705820-5" data-silex-id="silex-id-1542031705820-5" style="">
+            </div><div data-silex-type="image" class="editable-style image-element parcours-img silex-id-1561622623616-0 page-cartographies-des-villes paged-element" data-silex-id="silex-id-1561622623616-0" style="" data-silex-href="#!page-cartographie-notre-histoire-compte"><img src="carte_recto.png" class="silex-element-content"></div><div data-silex-type="text" class="editable-style text-element silex-id-1542031705820-5 page-cartographies-des-villes paged-element" data-silex-id="silex-id-1542031705820-5" style="">
                 <div class="silex-element-content normal">Notre Histoire compte
                 </div>
             </div></div>
